# threat-intel-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
data/samples/: sample_reports.json
docs/: architecture.md
scripts/: generate_samples.py
src/: __init__.py  pipeline.py
src/classification/: __init__.py  classifier.py  transformer_classifier.py
src/ingestion/: __init__.py  generator.py  stix_feeds.py
src/processing/: __init__.py  entity_extractor.py  preprocessor.py
src/storage/: __init__.py  database.py
src/visualization/: __init__.py  charts.py
tests/: test_classifier.py  test_database.py  test_entity_extractor.py  test_generator.py  test_pipeline.py  test_preprocessor.py
