[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "threat-intel-pipeline"
version = "0.1.0"
description = "End-to-end ML pipeline for processing and classifying threat intelligence data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "osth0006"},
]
dependencies = [
    "click>=8.1",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "transformers>=4.35",
    "torch>=2.1",
    "duckdb>=0.9",
    "plotly>=5.18",
    "kaleido>=0.2",
    "rich>=13.0",
    "stix2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
threat-intel = "cli:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
